# fiap-ai-tech-challenge-03

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Modelfile  README.md  docker-compose.yaml  finetune_colab.ipynb  main.py  model.py  pyproject.toml  requirements.txt  vectorstore_colab.ipynb
.github/workflows/: lint.yml
chatbot/: __init__.py  chatbot.py
db/init_scripts/: init.sql
repositories/: __init__.py  medication.py  patient.py
tools/: __init__.py  pubmed_search.py
