[tool.poetry]
name = "fiap-medical-assistant"
version = "0.1.0"
description = "Medical Assistant using fine-tuned Llama model"
authors = [
    "Ademir Pereira <ademirspr@live.com>",
    "Gabriel Santos <gabriel@ogabrielsantos.com.br>",
    "Mauricio Rodrigues <momorodrigues1@gmail.com>"
]
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
streamlit = "1.50.0"
langchain = "0.3.27"
langchain-core = "0.3.76"
langchain-ollama = "0.3.3"
chromadb = "0.5.23"
posthog = "<6.0.0"
sentence-transformers = "2.7.0"
psycopg2-binary = "2.9.10"
python-dotenv = "1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_strict_optional = true
show_error_codes = true
warn_unused_ignores = true
